# dev_func_fft

./: CMakeLists.txt  README.md  SM_FFT_LICENSE  dev_func_fft_timing_comparison.20201007  gen_m_n_table.py  race_cond_check.sh  shared_mem_vs_not.timing  try_fft.py
include/: FFT_params.cuh  SM_FFT_parameters.cuh  SimpleDSP.cuh  cpu_cookbook_fft64.hpp  expected_con_sqrs.hpp  expected_frequencies.hpp  expected_psds.hpp  expected_sfrequencies.hpp  my_cuda_utils.hpp  my_cufft_utils.hpp  my_utils.hpp  simple_dsp_kernels.cuh  sincos_table.cuh  sm_fft.cuh
src/: SimpleDSP.cu  main.cpp  my_cufft_utils.cpp  simple_dsp_kernels.cu  sincos_table.cu
